--- a/styles.css
+++ b/styles.css
@@ -1,44 +1,39 @@
+body{
+    background-color: brown;
+    color: white;
+}
 h1{
-    color: crimson;
-    font-style:italic;
+    color: aqua;
+    font-style: italic;
     text-align: center;
 }
-.secondaryDiv{
-    /* background-color: rgb(28, 123, 129); */
-    align-items: center;
-    justify-self: center;
+.secondDiv{
+    background-color: blue;
+    /* align-items: center; */
+    justify-content: center;
+    display: flex;
 }
-.firstbutton{
-    padding: 50px;
-    margin-top: 5px;
-    margin-bottom: 5px;
-    margin-left: 250px;
-    margin-right: 20px;
+.firstButton{
+    margin: 5px;
+    padding: 5px 10px;
     cursor: pointer;
-    border: 5px solid green;
-    
+    border: 3px dotted red;
 }
 /* button:hover{
-    background-color: rgb(152, 167, 19);
+    background-color: black;
+    color: aqua;
 } */
-body{
-    background-color: cadetblue;
-    color: blanchedalmond;
-    display: flex;
-}
-
-.subbut2{
-    display: flex;
-    justify-self: center;
-    background-color: gray;
-}
-.subbut{
+.subButJS {
+    margin: 30px;
     padding: 5px 10px;
-    background-color: rgb(255, 0, 0);
+    background-color: grey;
+    color: black;
+    border-radius: 18px;
+}
+.subBut{
+    margin: 30px;
+    padding: 5px 10px;
+    background-color: black;
     color: white;
-    border-radius: 20px;
-    align-items: center;
-    justify-self: center;
-    margin-right: 50px;
-    display: flex;
+    border-radius: 18px;
 }
